2007-01-29  Matthew Gregan  <kinetik@orcon.net.nz>

	* INSTALL: Drop the libboost-serialization-dev requirement since
	it is no longer needed.

2007-01-27  Derek Scherger  <derek@echologic.com>

	* configure.ac: add AC_FUNC_MMAP check so that the ifdef for
	HAVE_MMAP in rcs_file.cc might work
	* rcs_file.cc: change ifdef for HAVE_FCNTL to HAVE_FCNTL_H to
	match config.h

2007-01-27  Timothy Brownawell  <tbrownaw@gmail.com>

	Make vocab-from-string constructors explicit. Fix (some) places
	where variables or parameters were given the wrong type.

2007-01-24  Richard Levitte  <richard@levitte.org>

	* debian/monotone-server.postinst, debian/changelog: update the
	version for which a database upgrade is needed.

2007-01-23  Zack Weinberg  <zackw@panix.com>

	* database.cc (format_sqlite_error_for_info): Look for translated
	version of "sqlite error: " too.  Problem found by tommyd on IRC.
	* po/*.po: Define the translation of this string, using the
	existing translation of "sqlite error: %s\n%s".

2007-01-21  Derek Scherger  <derek@echologic.com>

	* (read_directory): use 'entry.' instead of 'di->' for consistency
	(walk_tree_recursive): use read_directory instead of a
	directory_iterator directly to reuse some code we already have and
	to separate the files and dirs phases of the walk; also move the
	check for bookkeeping paths to the directory phase of the walk
	* tests/ls_unknown_in_subdir/__driver__.lua: fix syntax problem
	hidden by xfail

2007-01-21  Zack Weinberg  <zackw@panix.com>

	* schema_migration.hh (mtn_creator_code): Define the creator code
	we will henceforth insert into databases.
	* schema.sql: Remove manifests, manifest_certs, and manifest_deltas.
	* README.changesets: Old manifest certs are no longer preserved.

	* schema_migration.cc (migration_events): Update.
	(migrate_add_ccode_and_drop_manifest_tables): New migrator.
	(calculate_schema_id): Rename get_schema_data; don't compute the hash.
	Include the creator code in the schema data.